feat: add decorators to log and translate error messages

--- a/src/infra/locales/en.json
+++ b/src/infra/locales/en.json
@@ -1,3 +1,5 @@
 {
-  "User not found": "User not found"
+	"User not found": "User not found",
+	"There is already a user registered with this email": "There is already a user registered with this email",
+	"Internal server error": "Internal server error"
 }
