feat: add create business

--- a/src/infra/locales/en.json
+++ b/src/infra/locales/en.json
@@ -1,5 +1,6 @@
 {
 	"User not found": "User not found",
 	"There is already a user registered with this email": "There is already a user registered with this email",
-	"Internal server error": "Internal server error"
+	"Internal server error": "Internal server error",
+	"Missing param: avatar": "Missing param: avatar"
 }
