refactor: models and domain to add jobs entity

--- a/src/infra/locales/el.json
+++ b/src/infra/locales/el.json
@@ -1,3 +1,4 @@
 {
-  "User not found": "Usuario no encontrado"
+	"User not found": "Usuario no encontrado",
+	"Internal server error": "Internal server error"
 }
